AS/AS-TP4-2013-files/_build/arithpar.automaton
State 0:
start' -> . start [ # ]
-- On WHILE shift to state 1
-- On VAR shift to state 86
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On OPENPAR shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FOR shift to state 52
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On ACOPEN shift to state 62
-- On whiles shift to state 63
-- On tab shift to state 87
-- On stmts_inner shift to state 64
-- On stmts shift to state 88
-- On stmt shift to state 67
-- On start2 shift to state 89
-- On start shift to state 91
-- On fors shift to state 70
-- On expr shift to state 92
-- On bloc shift to state 71
-- On assignable shift to state 55
-- On assign shift to state 93
-- On EOF reduce production stmts_inner -> 

State 1:
whiles -> WHILE . OPENPAR expr CLOSEPAR ACOPEN stmts ACOFER [ PV CLOSEPAR ]
whiles -> WHILE . expr ACOPEN stmts ACOFER [ PV CLOSEPAR ]
whiles -> WHILE . expr stmts [ PV CLOSEPAR ]
whiles -> WHILE . OPENPAR expr CLOSEPAR stmts [ PV CLOSEPAR ]
-- On VAR shift to state 2
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On OPENPAR shift to state 5
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 81

State 2:
expr -> VAR . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On WHILE reduce production expr -> VAR 
-- On VAR reduce production expr -> VAR 
-- On TIMES reduce production expr -> VAR 
-- On PV reduce production expr -> VAR 
-- On PLUS reduce production expr -> VAR 
-- On OR reduce production expr -> VAR 
-- On NEQ reduce production expr -> VAR 
-- On MINUS reduce production expr -> VAR 
-- On LT reduce production expr -> VAR 
-- On LEQ reduce production expr -> VAR 
-- On GT reduce production expr -> VAR 
-- On GEQ reduce production expr -> VAR 
-- On FOR reduce production expr -> VAR 
-- On EQ reduce production expr -> VAR 
-- On EOF reduce production expr -> VAR 
-- On DIVIDE reduce production expr -> VAR 
-- On CLOSEPAR reduce production expr -> VAR 
-- On CLOSECRO reduce production expr -> VAR 
-- On AND reduce production expr -> VAR 
-- On ACOPEN reduce production expr -> VAR 

State 3:
expr -> TRUE . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On WHILE reduce production expr -> TRUE 
-- On VAR reduce production expr -> TRUE 
-- On TIMES reduce production expr -> TRUE 
-- On PV reduce production expr -> TRUE 
-- On PLUS reduce production expr -> TRUE 
-- On OR reduce production expr -> TRUE 
-- On NEQ reduce production expr -> TRUE 
-- On MINUS reduce production expr -> TRUE 
-- On LT reduce production expr -> TRUE 
-- On LEQ reduce production expr -> TRUE 
-- On GT reduce production expr -> TRUE 
-- On GEQ reduce production expr -> TRUE 
-- On FOR reduce production expr -> TRUE 
-- On EQ reduce production expr -> TRUE 
-- On EOF reduce production expr -> TRUE 
-- On DIVIDE reduce production expr -> TRUE 
-- On CLOSEPAR reduce production expr -> TRUE 
-- On CLOSECRO reduce production expr -> TRUE 
-- On AND reduce production expr -> TRUE 
-- On ACOPEN reduce production expr -> TRUE 

State 4:
expr -> STRING . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On WHILE reduce production expr -> STRING 
-- On VAR reduce production expr -> STRING 
-- On TIMES reduce production expr -> STRING 
-- On PV reduce production expr -> STRING 
-- On PLUS reduce production expr -> STRING 
-- On OR reduce production expr -> STRING 
-- On NEQ reduce production expr -> STRING 
-- On MINUS reduce production expr -> STRING 
-- On LT reduce production expr -> STRING 
-- On LEQ reduce production expr -> STRING 
-- On GT reduce production expr -> STRING 
-- On GEQ reduce production expr -> STRING 
-- On FOR reduce production expr -> STRING 
-- On EQ reduce production expr -> STRING 
-- On EOF reduce production expr -> STRING 
-- On DIVIDE reduce production expr -> STRING 
-- On CLOSEPAR reduce production expr -> STRING 
-- On CLOSECRO reduce production expr -> STRING 
-- On AND reduce production expr -> STRING 
-- On ACOPEN reduce production expr -> STRING 

State 5:
expr -> OPENPAR . expr CLOSEPAR [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ DIVIDE CLOSEPAR AND ACOPEN ]
whiles -> WHILE OPENPAR . expr CLOSEPAR ACOPEN stmts ACOFER [ PV CLOSEPAR ]
whiles -> WHILE OPENPAR . expr CLOSEPAR stmts [ PV CLOSEPAR ]
-- On VAR shift to state 2
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On OPENPAR shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 40

State 6:
expr -> OPENPAR . expr CLOSEPAR [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On OPENPAR shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 14

State 7:
expr -> NOT . expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On OPENPAR shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 13

State 8:
expr -> MINUS . expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On OPENPAR shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 12

State 9:
expr -> INT . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On WHILE reduce production expr -> INT 
-- On VAR reduce production expr -> INT 
-- On TIMES reduce production expr -> INT 
-- On PV reduce production expr -> INT 
-- On PLUS reduce production expr -> INT 
-- On OR reduce production expr -> INT 
-- On NEQ reduce production expr -> INT 
-- On MINUS reduce production expr -> INT 
-- On LT reduce production expr -> INT 
-- On LEQ reduce production expr -> INT 
-- On GT reduce production expr -> INT 
-- On GEQ reduce production expr -> INT 
-- On FOR reduce production expr -> INT 
-- On EQ reduce production expr -> INT 
-- On EOF reduce production expr -> INT 
-- On DIVIDE reduce production expr -> INT 
-- On CLOSEPAR reduce production expr -> INT 
-- On CLOSECRO reduce production expr -> INT 
-- On AND reduce production expr -> INT 
-- On ACOPEN reduce production expr -> INT 

State 10:
expr -> FLOAT . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On WHILE reduce production expr -> FLOAT 
-- On VAR reduce production expr -> FLOAT 
-- On TIMES reduce production expr -> FLOAT 
-- On PV reduce production expr -> FLOAT 
-- On PLUS reduce production expr -> FLOAT 
-- On OR reduce production expr -> FLOAT 
-- On NEQ reduce production expr -> FLOAT 
-- On MINUS reduce production expr -> FLOAT 
-- On LT reduce production expr -> FLOAT 
-- On LEQ reduce production expr -> FLOAT 
-- On GT reduce production expr -> FLOAT 
-- On GEQ reduce production expr -> FLOAT 
-- On FOR reduce production expr -> FLOAT 
-- On EQ reduce production expr -> FLOAT 
-- On EOF reduce production expr -> FLOAT 
-- On DIVIDE reduce production expr -> FLOAT 
-- On CLOSEPAR reduce production expr -> FLOAT 
-- On CLOSECRO reduce production expr -> FLOAT 
-- On AND reduce production expr -> FLOAT 
-- On ACOPEN reduce production expr -> FLOAT 

State 11:
expr -> FALSE . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On WHILE reduce production expr -> FALSE 
-- On VAR reduce production expr -> FALSE 
-- On TIMES reduce production expr -> FALSE 
-- On PV reduce production expr -> FALSE 
-- On PLUS reduce production expr -> FALSE 
-- On OR reduce production expr -> FALSE 
-- On NEQ reduce production expr -> FALSE 
-- On MINUS reduce production expr -> FALSE 
-- On LT reduce production expr -> FALSE 
-- On LEQ reduce production expr -> FALSE 
-- On GT reduce production expr -> FALSE 
-- On GEQ reduce production expr -> FALSE 
-- On FOR reduce production expr -> FALSE 
-- On EQ reduce production expr -> FALSE 
-- On EOF reduce production expr -> FALSE 
-- On DIVIDE reduce production expr -> FALSE 
-- On CLOSEPAR reduce production expr -> FALSE 
-- On CLOSECRO reduce production expr -> FALSE 
-- On AND reduce production expr -> FALSE 
-- On ACOPEN reduce production expr -> FALSE 

State 12:
expr -> expr . PLUS expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . TIMES expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . MINUS expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . DIVIDE expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . EQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . NEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . LT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . GT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . LEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . GEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . AND expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . OR expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> MINUS expr . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On WHILE reduce production expr -> MINUS expr 
-- On VAR reduce production expr -> MINUS expr 
-- On TIMES reduce production expr -> MINUS expr 
-- On PV reduce production expr -> MINUS expr 
-- On PLUS reduce production expr -> MINUS expr 
-- On OR reduce production expr -> MINUS expr 
-- On NEQ reduce production expr -> MINUS expr 
-- On MINUS reduce production expr -> MINUS expr 
-- On LT reduce production expr -> MINUS expr 
-- On LEQ reduce production expr -> MINUS expr 
-- On GT reduce production expr -> MINUS expr 
-- On GEQ reduce production expr -> MINUS expr 
-- On FOR reduce production expr -> MINUS expr 
-- On EQ reduce production expr -> MINUS expr 
-- On EOF reduce production expr -> MINUS expr 
-- On DIVIDE reduce production expr -> MINUS expr 
-- On CLOSEPAR reduce production expr -> MINUS expr 
-- On CLOSECRO reduce production expr -> MINUS expr 
-- On AND reduce production expr -> MINUS expr 
-- On ACOPEN reduce production expr -> MINUS expr 

State 13:
expr -> expr . PLUS expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . TIMES expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . MINUS expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . DIVIDE expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . EQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . NEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . LT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . GT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . LEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . GEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . AND expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . OR expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> NOT expr . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On WHILE reduce production expr -> NOT expr 
-- On VAR reduce production expr -> NOT expr 
-- On TIMES reduce production expr -> NOT expr 
-- On PV reduce production expr -> NOT expr 
-- On PLUS reduce production expr -> NOT expr 
-- On OR reduce production expr -> NOT expr 
-- On NEQ reduce production expr -> NOT expr 
-- On MINUS reduce production expr -> NOT expr 
-- On LT reduce production expr -> NOT expr 
-- On LEQ reduce production expr -> NOT expr 
-- On GT reduce production expr -> NOT expr 
-- On GEQ reduce production expr -> NOT expr 
-- On FOR reduce production expr -> NOT expr 
-- On EQ reduce production expr -> NOT expr 
-- On EOF reduce production expr -> NOT expr 
-- On DIVIDE reduce production expr -> NOT expr 
-- On CLOSEPAR reduce production expr -> NOT expr 
-- On CLOSECRO reduce production expr -> NOT expr 
-- On AND reduce production expr -> NOT expr 
-- On ACOPEN reduce production expr -> NOT expr 

State 14:
expr -> expr . PLUS expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . TIMES expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . MINUS expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . DIVIDE expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . EQ expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . NEQ expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . LT expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . GT expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . LEQ expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . GEQ expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . AND expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> expr . OR expr [ TIMES PLUS OR NEQ MINUS LT LEQ GT GEQ EQ DIVIDE CLOSEPAR AND ]
expr -> OPENPAR expr . CLOSEPAR [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On TIMES shift to state 15
-- On PLUS shift to state 17
-- On OR shift to state 21
-- On NEQ shift to state 23
-- On MINUS shift to state 25
-- On LT shift to state 27
-- On LEQ shift to state 29
-- On GT shift to state 31
-- On GEQ shift to state 33
-- On EQ shift to state 35
-- On DIVIDE shift to state 19
-- On CLOSEPAR shift to state 37
-- On AND shift to state 38

State 15:
expr -> expr TIMES . expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On OPENPAR shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 16

State 16:
expr -> expr . PLUS expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . TIMES expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr TIMES expr . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . MINUS expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . DIVIDE expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . EQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . NEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . LT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . GT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . LEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . GEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . AND expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . OR expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On WHILE reduce production expr -> expr TIMES expr 
-- On VAR reduce production expr -> expr TIMES expr 
-- On TIMES reduce production expr -> expr TIMES expr 
-- On PV reduce production expr -> expr TIMES expr 
-- On PLUS reduce production expr -> expr TIMES expr 
-- On OR reduce production expr -> expr TIMES expr 
-- On NEQ reduce production expr -> expr TIMES expr 
-- On MINUS reduce production expr -> expr TIMES expr 
-- On LT reduce production expr -> expr TIMES expr 
-- On LEQ reduce production expr -> expr TIMES expr 
-- On GT reduce production expr -> expr TIMES expr 
-- On GEQ reduce production expr -> expr TIMES expr 
-- On FOR reduce production expr -> expr TIMES expr 
-- On EQ reduce production expr -> expr TIMES expr 
-- On EOF reduce production expr -> expr TIMES expr 
-- On DIVIDE reduce production expr -> expr TIMES expr 
-- On CLOSEPAR reduce production expr -> expr TIMES expr 
-- On CLOSECRO reduce production expr -> expr TIMES expr 
-- On AND reduce production expr -> expr TIMES expr 
-- On ACOPEN reduce production expr -> expr TIMES expr 

State 17:
expr -> expr PLUS . expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On OPENPAR shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 18

State 18:
expr -> expr . PLUS expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr PLUS expr . [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . TIMES expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . MINUS expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . DIVIDE expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . EQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . NEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . LT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . GT expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . LEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . GEQ expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . AND expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
expr -> expr . OR expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On TIMES shift to state 15
-- On DIVIDE shift to state 19
-- On WHILE reduce production expr -> expr PLUS expr 
-- On VAR reduce production expr -> expr PLUS expr 
-- On PV reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On NEQ reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LT reduce production expr -> expr PLUS expr 
-- On LEQ reduce production expr -> expr PLUS expr 
-- On GT reduce production expr -> expr PLUS expr 
-- On GEQ reduce production expr -> expr PLUS expr 
-- On FOR reduce production expr -> expr PLUS expr 
-- On EQ reduce production expr -> expr PLUS expr 
-- On EOF reduce production expr -> expr PLUS expr 
-- On CLOSEPAR reduce production expr -> expr PLUS expr 
-- On CLOSECRO reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 
-- On ACOPEN reduce production expr -> expr PLUS expr 

State 19:
expr -> expr DIVIDE . expr [ WHILE VAR TIMES PV PLUS OR NEQ MINUS LT LEQ GT GEQ FOR EQ EOF DIVIDE CLOSEPAR CLOSECRO AND ACOPEN ]
-- On VAR shift to state 2
-- On TRUE shift to state 3
-- On STRING shift to state 4
-- On OPENPAR shift to state 6
-- On NOT shift to state 7
-- On MINUS shift to state 8
-- On INT shift to state 9
-- On FLOAT shift to state 10
-- On FALSE shift to state 11
-- On expr shift to state 20
